# agents

./: CLAUDE.md  CONTRIBUTING.md  README.md  netlify.toml  package-lock.json  package.json  pyproject.toml
.github/workflows/: cli-version-check.yml  deploy.yml  liquidity-ramp.yml  pr-market-rollover.yml  pr-market.yml  test.yml
agents/: naive_bayes.py
cli/: pyproject.toml
cli/futarchy_cli/: __init__.py  api.py  auth.py  fmt.py  main.py  update_check.py
core/: TEST_PLAN.md  api.py  api_errors.py  api_models.py  auth.py  cli.py  lmsr.py  market_engine.py  middleware.py  models.py  persistence.py  reputation.py  risk_engine.py  test_api.py  test_cli_compat.py  test_cli_update_check.py  test_core.py  webhook_repos.json
deploy/: Caddyfile  deploy.sh  post-deploy.sh  rollover.sh  webhook.py
docs/: DECISIONS.md  FUTARCHIC_ORGANIZATIONS.md  VISION.md
docs/brainstorm/: 00-INDEX.md  01-core-thesis.md  02-separation-problem.md  03-agent-economy.md  04-reviewer-mechanism.md  05-orchestrator-economy.md  06-evolution.md  07-counterfactual-eval.md  08-path-to-market.md  09-open-questions.md  12-mvp-design.md  13-issue-resolution-markets.md  14-market-types-beyond-prs.md  15-trust-layer-for-ai.md  16-agent-reputation-exchange.md  17-mvp-status-2026-03-17.md  18-futarchy-nonprofits.md
static/: dashboard.html  dashboard.lmsr-ref.test.mjs  index.html  install.sh  landing.html
