[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "futarchy"
version = "0.1.0"
description = "CLI for Futarchy prediction markets"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["futarchy_cli"]

[project.scripts]
futarchy = "futarchy_cli.main:main"
